--- a/src/main/resources/com/example/maquina_expendedora1/hello-view.fxml
+++ b/src/main/resources/com/example/maquina_expendedora1/hello-view.fxml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.maquina_expendedora1.HelloController">
+<GridPane fx:id="GridPrincipal" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.maquina_expendedora1.HelloController">
   <columnConstraints>
     <ColumnConstraints hgrow="ALWAYS" maxWidth="295.0" minWidth="10.0" prefWidth="233.0" />
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="328.0" minWidth="10.0" prefWidth="232.0" />
@@ -83,24 +88,24 @@
       </Label>
       <VBox prefHeight="189.0" prefWidth="254.0" GridPane.columnIndex="3">
          <children>
-            <Label fx:id="IDAnimal" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Hola">
+            <Label fx:id="IDAnimal" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="ID:">
                <font>
                   <Font size="30.0" />
                </font>
             </Label>
-            <Label fx:id="Producto" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Hola">
+            <Label fx:id="Animal" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Producto:">
                <font>
                   <Font size="30.0" />
                </font>
             </Label>
-            <Label fx:id="Precio" alignment="CENTER_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="0,00€">
+            <Label fx:id="Precio" alignment="CENTER_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="0.00€">
                <font>
                   <Font size="30.0" />
                </font>
             </Label>
          </children>
       </VBox>
-      <GridPane GridPane.columnIndex="3" GridPane.rowIndex="1" GridPane.rowSpan="2">
+      <GridPane fx:id="GridNumerico" GridPane.columnIndex="3" GridPane.rowIndex="1" GridPane.rowSpan="2">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -123,7 +128,7 @@
             <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="3" GridPane.columnIndex="2" GridPane.rowIndex="2" />
          </children>
       </GridPane>
-      <GridPane GridPane.columnIndex="3" GridPane.rowIndex="4" GridPane.rowSpan="2">
+      <GridPane fx:id="GridDinero" GridPane.columnIndex="3" GridPane.rowIndex="4" GridPane.rowSpan="2">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -138,9 +143,9 @@
             <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="5€" />
             <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="2€" GridPane.columnIndex="1" />
             <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="1€" GridPane.rowIndex="1" />
-            <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="0,50€" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="0,20€" GridPane.rowIndex="2" />
-            <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="0,10€" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="0.50€" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="0.20€" GridPane.rowIndex="2" />
+            <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="0.10€" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="CANCELAR" GridPane.rowIndex="3" />
             <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="COMPRAR" GridPane.columnIndex="1" GridPane.rowIndex="3" />
          </children>
